lab7/y.output
Grammar

    0 $accept: EL $end

    1 EL: EL E
    2   | ε

    3 E: E '+' T
    4  | E '-' T
    5  | T

    6 T: T '*' F
    7  | T '/' F
    8  | F

    9 F: NUM


Terminals, with rules where they appear

    $end (0) 0
    '*' (42) 6
    '+' (43) 3
    '-' (45) 4
    '/' (47) 7
    error (256)
    NUM (258) 9


Nonterminals, with rules where they appear

    $accept (8)
        on left: 0
    EL (9)
        on left: 1 2
        on right: 0 1
    E (10)
        on left: 3 4 5
        on right: 1 3 4
    T (11)
        on left: 6 7 8
        on right: 3 4 5 6 7
    F (12)
        on left: 9
        on right: 6 7 8


State 0

    0 $accept: • EL $end

    $default  reduce using rule 2 (EL)

    EL  go to state 1


State 1

    0 $accept: EL • $end
    1 EL: EL • E

    $end  shift, and go to state 2
    NUM   shift, and go to state 3

    E  go to state 4
    T  go to state 5
    F  go to state 6


State 2

    0 $accept: EL $end •

    $default  accept


State 3

    9 F: NUM •

    $default  reduce using rule 9 (F)


State 4

    1 EL: EL E •
    3 E: E • '+' T
    4  | E • '-' T

    '+'  shift, and go to state 7
    '-'  shift, and go to state 8

    $default  reduce using rule 1 (EL)


State 5

    5 E: T •
    6 T: T • '*' F
    7  | T • '/' F

    '*'  shift, and go to state 9
    '/'  shift, and go to state 10

    $default  reduce using rule 5 (E)


State 6

    8 T: F •

    $default  reduce using rule 8 (T)


State 7

    3 E: E '+' • T

    NUM  shift, and go to state 3

    T  go to state 11
    F  go to state 6


State 8

    4 E: E '-' • T

    NUM  shift, and go to state 3

    T  go to state 12
    F  go to state 6


State 9

    6 T: T '*' • F

    NUM  shift, and go to state 3

    F  go to state 13


State 10

    7 T: T '/' • F

    NUM  shift, and go to state 3

    F  go to state 14


State 11

    3 E: E '+' T •
    6 T: T • '*' F
    7  | T • '/' F

    '*'  shift, and go to state 9
    '/'  shift, and go to state 10

    $default  reduce using rule 3 (E)


State 12

    4 E: E '-' T •
    6 T: T • '*' F
    7  | T • '/' F

    '*'  shift, and go to state 9
    '/'  shift, and go to state 10

    $default  reduce using rule 4 (E)


State 13

    6 T: T '*' F •

    $default  reduce using rule 6 (T)


State 14

    7 T: T '/' F •

    $default  reduce using rule 7 (T)
